--- a/Chapter_5<SVM>.ipynb
+++ b/Chapter_5<SVM>.ipynb
@@ -548,11 +548,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
-        "id": "b8QaPhMoq3FL"
+        "id": "b8QaPhMoq3FL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aa9923e5-170c-4322-ae43-d5081153ce52"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "SVC()"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ],
       "source": [
         "svm_clf = SVC(kernel='rbf' )\n",
         "svm_clf.fit(X_train_scaled, y_train)\n"
@@ -565,7 +580,42 @@
         "accuracy_score(y_train, y_pred)"
       ],
       "metadata": {
-        "id": "TfJD9BCOzV3b"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TfJD9BCOzV3b",
+        "outputId": "0bb23232-a54c-4871-ade5-3704087e6c00"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9866333333333334"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**98.7% That's great !**"
+      ],
+      "metadata": {
+        "id": "DIS274Tm985j"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "G_XLn_w6-BJ9"
       },
       "execution_count": null,
       "outputs": []
@@ -575,7 +625,8 @@
     "colab": {
       "name": "Chapter_5<SVM>",
       "provenance": [],
-      "authorship_tag": "ABX9TyOpJJMp1Wr3hwxQQ9DjmqtL",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyM15x0g0MCxn4EMoK8tB659",
       "include_colab_link": true
     },
     "kernelspec": {
